[package]
name = "fastwebsockets"
description = "A fast RFC6455 WebSocket server implementation"
version = "0.10.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/kostasgr100/fastwebsockets"

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["upgrade"]

[[example]]
name = "autobahn_client"
path = "examples/autobahn_client.rs"
required-features = ["upgrade"]

[[example]]
name = "tls_client"
path = "examples/tls_client.rs"
required-features = ["upgrade"]

[[example]]
name = "tls_server"
path = "examples/tls_server.rs"
required-features = ["upgrade"]

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["upgrade", "with_axum"]

[[example]]
name = "echo_server_split"
path = "examples/echo_server_split.rs"
required-features = ["upgrade"]

[dependencies]
simdutf8 = { version = "0.1.5", optional = true }
hyper-util = { version = "0.1.10", features = ["tokio"], optional = true }
http-body-util = { version = "0.1.2", optional = true }
hyper = { version = "1", features = ["http1", "server", "client"], optional = true }
pin-project = { version = "1.1.10", optional = true }
base64 = { version = "0.22.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
utf-8 = "0.7.6"
rand = "0.9"
thiserror = "2.0.12"
bytes = "1.10.1"
tokio-uring = { git = "https://github.com/kostasgr100/tokio-uring.git", branch = "master" }
tokio-uring-rustls = { git = "https://github.com/kostasgr100/tokio-uring-rustls.git", branch = "main" }
rustls = "0.23.23"
tokio = { version = "1", features = ["io-util"], optional = true }  # Corrected placement

# Axum integration
axum-core = { version = "0.5.0", optional = true }
http = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = ["simd"]
simd = ["dep:simdutf8/aarch64_neon"]
upgrade = [
    "dep:hyper",
    "dep:pin-project",
    "dep:base64",
    "dep:sha1",
    "dep:hyper-util",
    "dep:http-body-util",
]
unstable-split = []
with_axum = ["dep:axum-core", "dep:http", "dep:async-trait"]
tokio = ["dep:tokio"]  # Properly enable tokio dependency

[dev-dependencies]
tokio-uring-rustls = { git = "https://github.com/kostasgr100/tokio-uring-rustls.git", branch = "main" }
rustls-pemfile = "2.2.0"
hyper-util = { version = "0.1.10", features = ["tokio"] }
http-body-util = { version = "0.1.2" }
hyper = { version = "1", features = ["http1", "server", "client"] }
assert2 = "0.3.15"
trybuild = "1.0.104"
criterion = "0.5.1"
anyhow = "1.0.97"
webpki-roots = "0.26.8"
bytes = "1.10.1"
axum = "0.8.1"

[[test]]
name = "upgrade"
path = "tests/upgrade.rs"
required-features = ["upgrade"]

[[test]]
name = "split"
path = "tests/split.rs"
required-features = ["upgrade"]

[[test]]
name = "concurrency"
path = "tests/concurrency.rs"
required-features = ["upgrade"]

[[bench]]
name = "unmask"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
features = ["upgrade", "with_axum", "tokio"]
